--- a/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
+++ b/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
@@ -12,14 +12,14 @@
     "    Se ejecuta la pregunta mediante una técnica(similitud, vectorial, etc)\n",
     "    se verifica si el documento correcto(id) está en los resultados\n",
     "```\n",
-    "## Métricas\n",
+    "- **Métricas**\n",
     "Se emplean 2 métricas de evaluación\n",
-    "- Hit Rate\n",
-    "- Mean Reciprocal Rank \n",
+    "    - Hit Rate\n",
+    "    - Mean Reciprocal Rank \n",
     "\n",
-    "## Documentos\n",
-    "- Se usa: `documentos_idhash.json` y  `ground-truth-data.csv`\n",
-    "- Resultado: "
+    "- **Documentos**\n",
+    "    - Se usa: `documentos_idhash.json` y  `ground-truth-data.csv`\n",
+    "    - Resultado: "
    ]
   },
   {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "83694e49",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        " 'id': 'be5bfee4'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b4888330",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4  c02e79ef  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,36 +184,37 @@
    "id": "8352fa6d",
    "metadata": {},
    "source": [
-    "Pero conviene usarlo como diccionario para poder recorrer cada "
+    "Pero conviene usarlo como diccionario para poder recorrer cada elemento por question, course o el id del documento"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9dc57b27",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "pandas.core.frame.DataFrame"
+       "[{'question': 'When does the course begin?',\n",
+       "  'course': 'data-engineering-zoomcamp',\n",
+       "  'document': 'c02e79ef'},\n",
+       " {'question': 'How can I get the course schedule?',\n",
+       "  'course': 'data-engineering-zoomcamp',\n",
+       "  'document': 'c02e79ef'},\n",
+       " {'question': 'What is the link for course registration?',\n",
+       "  'course': 'data-engineering-zoomcamp',\n",
+       "  'document': 'c02e79ef'}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1077ade",
-   "metadata": {},
-   "source": [
-    "https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_dict.html"
+    "ground_truthdata= df.to_dict('records')\n",
+    "ground_truthdata[0:3]"
    ]
   },
   {
@@ -239,30 +240,252 @@
     "3. Función de búsqueda Semántica usando elastic search. Devuelve los documentos con mayor coincidencia.\n",
     "4.  \n",
     "\n",
+    "**Nota**: recuerda correr elastic search usando docker <p>\n",
+    "docker run -it \\\n",
+    "    --rm \\\n",
+    "    --name elasticsearch \\\n",
+    "    -m 4GB \\\n",
+    "    -p 9200:9200 \\\n",
+    "    -p 9300:9300 \\\n",
+    "    -e \"discovery.type=single-node\" \\\n",
+    "    -e \"xpack.security.enabled=false\" \\\n",
+    "    docker.elastic.co/elasticsearch/elasticsearch:8.4.3\n",
+    "\n",
     "- Más detalles: [módulo 1](https://github.com/Halsey26/llm-zoomcamp/blob/main/01_Mod_IntroRag/rag_intro.ipynb) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "918cea33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'name': '25a54b12f136', 'cluster_name': 'docker-cluster', 'cluster_uuid': 'jJHZMmwnTg6JCSb6Y35YYw', 'version': {'number': '8.4.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '42f05b9372a9a4a470db3b52817899b99a76ee73', 'build_date': '2022-10-04T07:17:24.662462378Z', 'build_snapshot': False, 'lucene_version': '9.3.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import elasticsearch\n",
     "from elasticsearch import Elasticsearch\n",
     "# cliente\n",
-    "es_cliente= Elasticsearch('http://127.0.0.1:9200/')\n"
+    "es_cliente= Elasticsearch('http://127.0.0.1:9200/')\n",
+    "es_cliente.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "c7a63cb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2223/1021064199.py:20: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  es_cliente.indices.create (index = nombre_index, body= index_config)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# configuracion \n",
+    "index_config= {\n",
+    "    \"settings\":{\n",
+    "        \"number_of_shards\": 1,\n",
+    "        \"number_of_replicas\": 0\n",
+    "    }, \n",
+    "    \"mappings\": {\n",
+    "        \"properties\":{\n",
+    "            \"text\": {\"type\": \"text\"},\n",
+    "            \"section\": {\"type\": \"text\"},\n",
+    "            \"question\": {\"type\": \"text\"},\n",
+    "            \"course\": {\"type\": \"keyword\"},\n",
+    "            \"id\": {\"type\": \"keyword\"},\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# creamos el index\n",
+    "nombre_index= \"course-questions\"\n",
+    "es_cliente.indices.create (index = nombre_index, body= index_config)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4d6d4c15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 6/948 [00:00<00:16, 58.56it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 948/948 [00:04<00:00, 208.68it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "for doc in tqdm(documentos):\n",
+    "    es_cliente.index(index= nombre_index, document=doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b805195e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2223/1163805824.py:28: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  respuesta_search= es_cliente.search(index=nombre_index, body= search_query)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'took': 20, 'timed_out': False, '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0}, 'hits': {'total': {'value': 407, 'relation': 'eq'}, 'max_score': 66.088936, 'hits': [{'_index': 'course-questions', '_id': 'wEX3Q5gBgJml6WbXHxQN', '_score': 66.088936, '_source': {'text': \"Yes, even if you don't register, you're still eligible to submit the homeworks.\\nBe aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\", 'section': 'General course-related questions', 'question': 'Course - Can I still join the course after the start date?', 'course': 'data-engineering-zoomcamp', 'id': '7842b56a'}}, {'_index': 'course-questions', '_id': 'xUX3Q5gBgJml6WbXHxSA', '_score': 46.730072, '_source': {'text': 'Yes, we will keep all the materials after the course finishes, so you can follow the course at your own pace after it finishes.\\nYou can also continue looking at the homeworks and continue preparing for the next cohort. I guess you can also start working on your final capstone project.', 'section': 'General course-related questions', 'question': 'Course - Can I follow the course after it finishes?', 'course': 'data-engineering-zoomcamp', 'id': 'a482086d'}}, {'_index': 'course-questions', '_id': 'xkX3Q5gBgJml6WbXHxSP', '_score': 43.99816, '_source': {'text': 'Yes, the slack channel remains open and you can ask questions there. But always sDocker containers exit code w search the channel first and second, check the FAQ (this document), most likely all your questions are already answered here.\\nYou can also tag the bot @ZoomcampQABot to help you conduct the search, but don’t rely on its answers 100%, it is pretty good though.', 'section': 'General course-related questions', 'question': 'Course - Can I get support if I take the course in the self-paced mode?', 'course': 'data-engineering-zoomcamp', 'id': 'eb56ae98'}}, {'_index': 'course-questions', '_id': 'wkX3Q5gBgJml6WbXHxQk', '_score': 36.514423, '_source': {'text': 'You can start by installing and setting up all the dependencies and requirements:\\nGoogle cloud account\\nGoogle Cloud SDK\\nPython 3 (installed with Anaconda)\\nTerraform\\nGit\\nLook over the prerequisites and syllabus to see if you are comfortable with these subjects.', 'section': 'General course-related questions', 'question': 'Course - What can I do before the course starts?', 'course': 'data-engineering-zoomcamp', 'id': '63394d91'}}, {'_index': 'course-questions', '_id': 'wUX3Q5gBgJml6WbXHxQT', '_score': 27.925764, '_source': {'text': \"You don't need it. You're accepted. You can also just start learning and submitting homework without registering. It is not checked against any registered list. Registration is just to gauge interest before the start date.\", 'section': 'General course-related questions', 'question': 'Course - I have registered for the Data Engineering Bootcamp. When can I expect to receive the confirmation email?', 'course': 'data-engineering-zoomcamp', 'id': '0bbf41ec'}}]}})"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# funcion busqueda\n",
+    "\n",
+    "query= 'if the course already started, can i still join it?'\n",
+    "course = 'data-engineering-zoomcamp'\n",
+    "\n",
+    "search_query= {\n",
+    "    \"size\": 5,\n",
+    "    \n",
+    "    \"query\": {\n",
+    "        \"bool\": {\n",
+    "            \"must\": {\n",
+    "                \"multi_match\": {\n",
+    "                    \"query\": query,\n",
+    "                    \"fields\": [\"question^3\", \"text\", \"section\"],\n",
+    "                    \"type\": \"best_fields\"\n",
+    "                }\n",
+    "            },\n",
+    "            \"filter\": {\n",
+    "                \"term\": {\n",
+    "                    \"course\": course\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# buqueda\n",
+    "respuesta_search= es_cliente.search(index=nombre_index, body= search_query)\n",
+    "respuesta_search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "88dd55b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Yes, even if you don't register, you're still eligible to submit the homeworks.\\nBe aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\""
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "respuesta_search['hits']['hits'][0]['_source']['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "0ebed691",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Yes, even if you don't register, you're still eligible to submit the homeworks.\\nBe aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\",\n",
+       " 'Yes, we will keep all the materials after the course finishes, so you can follow the course at your own pace after it finishes.\\nYou can also continue looking at the homeworks and continue preparing for the next cohort. I guess you can also start working on your final capstone project.',\n",
+       " 'Yes, the slack channel remains open and you can ask questions there. But always sDocker containers exit code w search the channel first and second, check the FAQ (this document), most likely all your questions are already answered here.\\nYou can also tag the bot @ZoomcampQABot to help you conduct the search, but don’t rely on its answers 100%, it is pretty good though.',\n",
+       " 'You can start by installing and setting up all the dependencies and requirements:\\nGoogle cloud account\\nGoogle Cloud SDK\\nPython 3 (installed with Anaconda)\\nTerraform\\nGit\\nLook over the prerequisites and syllabus to see if you are comfortable with these subjects.',\n",
+       " \"You don't need it. You're accepted. You can also just start learning and submitting homework without registering. It is not checked against any registered list. Registration is just to gauge interest before the start date.\"]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultados_search =[]\n",
+    "\n",
+    "for resultado in respuesta_search['hits']['hits']:\n",
+    "    respuesta = resultado['_source']['text']\n",
+    "    resultados_search.append(respuesta)\n",
+    "\n",
+    "resultados_search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "99e0fc17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 4, 3)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# es_cliente.info()"
+    "# es_cliente.info()\n",
+    "import elasticsearch\n",
+    "\n",
+    "elasticsearch.__version__"
    ]
   },
   {
