--- a/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
+++ b/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "e4cb6cbf",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "b4888330",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4  c02e79ef  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "9dc57b27",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "  'document': 'c02e79ef'}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,17 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "918cea33",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'name': '0a7d49c11c01', 'cluster_name': 'docker-cluster', 'cluster_uuid': 'Lh37s7P3TomzJ-REo3jkSA', 'version': {'number': '8.4.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '42f05b9372a9a4a470db3b52817899b99a76ee73', 'build_date': '2022-10-04T07:17:24.662462378Z', 'build_snapshot': False, 'lucene_version': '9.3.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
+       "ObjectApiResponse({'name': '54092449ec05', 'cluster_name': 'docker-cluster', 'cluster_uuid': 'njnqKmmfTiSjwF8svqrHKw', 'version': {'number': '8.4.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '42f05b9372a9a4a470db3b52817899b99a76ee73', 'build_date': '2022-10-04T07:17:24.662462378Z', 'build_snapshot': False, 'lucene_version': '9.3.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c7a63cb2",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2245/1021064199.py:20: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_2300/1021064199.py:20: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  es_cliente.indices.create (index = nombre_index, body= index_config)\n"
      ]
     },
@@ -298,7 +298,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "4d6d4c15",
    "metadata": {},
    "outputs": [
@@ -336,14 +336,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 16/948 [00:00<00:06, 154.81it/s]"
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "  1%|          | 10/948 [00:00<00:09, 96.45it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 948/948 [00:04<00:00, 218.76it/s]\n"
+      "100%|██████████| 948/948 [00:04<00:00, 214.87it/s]\n"
      ]
     }
    ],
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "b805195e",
    "metadata": {},
    "outputs": [],
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "0ebed691",
    "metadata": {},
    "outputs": [
@@ -406,7 +408,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2245/2031491954.py:25: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_2300/2031491954.py:25: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  respuesta_search= es_cliente.search(index=nombre_index, body= search_query)\n"
      ]
     },
@@ -440,7 +442,7 @@
        "  'id': '0bbf41ec'}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,42 +469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7eea252a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
-       " 'section': 'General course-related questions',\n",
-       " 'question': 'Course - When will the course start?',\n",
-       " 'course': 'data-engineering-zoomcamp',\n",
-       " 'id': 'c02e79ef'}"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "documentos[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "7ea347df",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.minsearch.Index at 0x72d0dc18a960>"
+       "<minsearch.minsearch.Index at 0x752415611f40>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "29993d88",
    "metadata": {},
    "outputs": [
@@ -555,7 +532,7 @@
        "  'id': '2f19301f'}]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "5b020b62",
    "metadata": {},
    "outputs": [
@@ -613,9 +590,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/5 [00:00<?, ?it/s]/tmp/ipykernel_2245/2031491954.py:25: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  0%|          | 0/5 [00:00<?, ?it/s]/tmp/ipykernel_2300/2031491954.py:25: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  respuesta_search= es_cliente.search(index=nombre_index, body= search_query)\n",
-      "100%|██████████| 5/5 [00:00<00:00, 65.73it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 35.26it/s]\n"
      ]
     }
    ],
@@ -638,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "id": "e4de5fe7",
    "metadata": {},
    "outputs": [
@@ -652,7 +629,7 @@
        " [False, False, False, False, False]]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "eee6d2c5",
    "metadata": {},
    "outputs": [],
@@ -705,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "e6de8c95",
    "metadata": {},
    "outputs": [
@@ -713,9 +690,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/4627 [00:00<?, ?it/s]/tmp/ipykernel_2245/2031491954.py:25: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  0%|          | 0/4627 [00:00<?, ?it/s]/tmp/ipykernel_2300/2031491954.py:25: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  respuesta_search= es_cliente.search(index=nombre_index, body= search_query)\n",
-      "100%|██████████| 4627/4627 [00:57<00:00, 80.29it/s]\n"
+      "100%|██████████| 4627/4627 [01:12<00:00, 64.07it/s]\n"
      ]
     }
    ],
@@ -725,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "f8cc5346",
    "metadata": {},
    "outputs": [
@@ -733,7 +710,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4627/4627 [00:17<00:00, 260.95it/s]\n"
+      "100%|██████████| 4627/4627 [00:15<00:00, 291.20it/s]\n"
      ]
     }
    ],
@@ -743,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "id": "645b12eb",
    "metadata": {},
    "outputs": [
@@ -755,7 +732,7 @@
        " [False, False, False, False, False]]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "id": "05974efd",
    "metadata": {},
    "outputs": [
@@ -778,7 +755,7 @@
        " [False, False, False, False, False]]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,60 +774,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "id": "d8c9548d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# realizamos un ejemplo\n",
+    "example = [\n",
+    "    [True, False, False, False, False], # 1, \n",
+    "    [False, False, False, False, False], # 0\n",
+    "    [False, False, False, False, False], # 0 \n",
+    "    [False, False, False, False, False], # 0\n",
+    "    [False, False, False, False, False], # 0 \n",
+    "    [True, False, False, False, False], # 1\n",
+    "    [True, False, False, False, False], # 1\n",
+    "    [True, False, False, False, False], # 1\n",
+    "    [True, False, False, False, False], # 1\n",
+    "    [True, False, False, False, False], # 1 \n",
+    "    [False, False, True, False, False],  # 1/3\n",
+    "    [False, False, False, False, False], # 0\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2d234252",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[True, False, False, False, False],\n",
-       " [False, False, False, False, False],\n",
-       " [False, False, False, False, False],\n",
-       " [False, False, False, False, False],\n",
-       " [False, False, False, False, False]]"
+       "0.5277777777777778"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# realizamos un ejemplo\n",
-    "relevantes"
+    "def mrr(relevantes):\n",
+    "    '''\n",
+    "    elemento.index(True) +1: Se optiene la posicion del primer valor True(relevante) y se suma 1, pues la posición inicia con 0\n",
+    "    '''\n",
+    "    sum_mrr= sum( 1/ (elemento.index(True) +1)  for elemento in relevantes if True in elemento)\n",
+    "    mrr= sum_mrr/len(relevantes)\n",
+    "\n",
+    "    return mrr\n",
+    "\n",
+    "mrr(example)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "2d234252",
+   "execution_count": 42,
+   "id": "ee3f0b73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5833333333333334"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def hit_rate(example):\n",
+    "    sum_hr = sum(1 for elemento in example if True in elemento   )\n",
+    "    hit_rate= sum_hr/len(example)\n",
+    "\n",
+    "    return hit_rate\n",
+    "    \n",
+    "\n",
+    "hit_rate(example)\n",
+    "# opcion2\n",
+    "# se genera 1 por cada True que se encuentre\n",
+    "# count= 0\n",
+    "# for i in example:\n",
+    "#     if True in i:\n",
+    "#         count += 1\n",
+    "\n",
+    "# hit_rate= count/len(example)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "134c75ae",
+   "metadata": {},
+   "source": [
+    "Evaluamos ambas búsquedas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4b5c17a7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
+      "0.7395720769397017\n",
+      "0.6998054895180462\n"
      ]
     }
    ],
    "source": [
-    "for i in range(len(relevantes)):\n",
-    "    print(i)"
+    "print(hit_rate(relevantes_elastic))\n",
+    "print(hit_rate(relevantes_minsearch))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ee3f0b73",
+   "execution_count": 43,
+   "id": "63999cec",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6024385851163461\n",
+      "0.5955190548231396\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mrr(relevantes_elastic))\n",
+    "print(mrr(relevantes_minsearch))"
+   ]
   }
  ],
  "metadata": {
