--- a/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
+++ b/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b4888330",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4  c02e79ef  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "9dc57b27",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "  'document': 'c02e79ef'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,17 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "918cea33",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'name': '54092449ec05', 'cluster_name': 'docker-cluster', 'cluster_uuid': 'njnqKmmfTiSjwF8svqrHKw', 'version': {'number': '8.4.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '42f05b9372a9a4a470db3b52817899b99a76ee73', 'build_date': '2022-10-04T07:17:24.662462378Z', 'build_snapshot': False, 'lucene_version': '9.3.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
+       "ObjectApiResponse({'name': '3bfcdc1149f9', 'cluster_name': 'docker-cluster', 'cluster_uuid': 'eKZIgmdYSW-ITJgtiIZgIA', 'version': {'number': '8.4.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '42f05b9372a9a4a470db3b52817899b99a76ee73', 'build_date': '2022-10-04T07:17:24.662462378Z', 'build_snapshot': False, 'lucene_version': '9.3.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "c7a63cb2",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2300/1021064199.py:20: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_2372/1021064199.py:20: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  es_cliente.indices.create (index = nombre_index, body= index_config)\n"
      ]
     },
@@ -298,7 +298,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "4d6d4c15",
    "metadata": {},
    "outputs": [
@@ -338,14 +338,14 @@
      "text": [
       "/usr/local/python/3.12.1/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "  1%|          | 10/948 [00:00<00:09, 96.45it/s]"
+      "  1%|          | 8/948 [00:00<00:12, 78.13it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 948/948 [00:04<00:00, 214.87it/s]\n"
+      "100%|██████████| 948/948 [00:04<00:00, 204.92it/s]\n"
      ]
     }
    ],
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "b805195e",
    "metadata": {},
    "outputs": [],
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "0ebed691",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2300/2031491954.py:25: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "/tmp/ipykernel_2372/2031491954.py:25: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  respuesta_search= es_cliente.search(index=nombre_index, body= search_query)\n"
      ]
     },
@@ -442,7 +442,7 @@
        "  'id': '0bbf41ec'}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,17 +469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7ea347df",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.minsearch.Index at 0x752415611f40>"
+       "<minsearch.minsearch.Index at 0x7a240ed36a80>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "29993d88",
    "metadata": {},
    "outputs": [
@@ -510,21 +510,21 @@
        "  'question': 'Course - Can I still join the course after the start date?',\n",
        "  'course': 'data-engineering-zoomcamp',\n",
        "  'id': '7842b56a'},\n",
-       " {'text': 'You can start by installing and setting up all the dependencies and requirements:\\nGoogle cloud account\\nGoogle Cloud SDK\\nPython 3 (installed with Anaconda)\\nTerraform\\nGit\\nLook over the prerequisites and syllabus to see if you are comfortable with these subjects.',\n",
-       "  'section': 'General course-related questions',\n",
-       "  'question': 'Course - What can I do before the course starts?',\n",
-       "  'course': 'data-engineering-zoomcamp',\n",
-       "  'id': '63394d91'},\n",
-       " {'text': 'Yes, we will keep all the materials after the course finishes, so you can follow the course at your own pace after it finishes.\\nYou can also continue looking at the homeworks and continue preparing for the next cohort. I guess you can also start working on your final capstone project.',\n",
-       "  'section': 'General course-related questions',\n",
-       "  'question': 'Course - Can I follow the course after it finishes?',\n",
-       "  'course': 'data-engineering-zoomcamp',\n",
-       "  'id': 'a482086d'},\n",
        " {'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
        "  'section': 'General course-related questions',\n",
        "  'question': 'Course - When will the course start?',\n",
        "  'course': 'data-engineering-zoomcamp',\n",
        "  'id': 'c02e79ef'},\n",
+       " {'text': 'Yes, we will keep all the materials after the course finishes, so you can follow the course at your own pace after it finishes.\\nYou can also continue looking at the homeworks and continue preparing for the next cohort. I guess you can also start working on your final capstone project.',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'question': 'Course - Can I follow the course after it finishes?',\n",
+       "  'course': 'data-engineering-zoomcamp',\n",
+       "  'id': 'a482086d'},\n",
+       " {'text': 'You can start by installing and setting up all the dependencies and requirements:\\nGoogle cloud account\\nGoogle Cloud SDK\\nPython 3 (installed with Anaconda)\\nTerraform\\nGit\\nLook over the prerequisites and syllabus to see if you are comfortable with these subjects.',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'question': 'Course - What can I do before the course starts?',\n",
+       "  'course': 'data-engineering-zoomcamp',\n",
+       "  'id': '63394d91'},\n",
        " {'text': 'Star the repo! Share it with friends if you find it useful ❣️\\nCreate a PR if you see you can improve the text or the structure of the repository.',\n",
        "  'section': 'General course-related questions',\n",
        "  'question': 'How can we contribute to the course?',\n",
@@ -532,7 +532,7 @@
        "  'id': '2f19301f'}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
     "def search_minsearch(query, course):\n",
     "    resultados= index.search(\n",
     "        query= query, \n",
-    "        boost_dict= {\"question\": 3, \"text\": 0.2, \"section\": 0.5} , \n",
+    "        boost_dict= {\"question\": 3, \"section\": 0.5} , \n",
     "        filter_dict= {\"course\": course} ,\n",
     "        num_results= 5\n",
     "    )\n",
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "d8c9548d",
    "metadata": {},
    "outputs": [],
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "2d234252",
    "metadata": {},
    "outputs": [
@@ -808,7 +808,7 @@
        "0.5277777777777778"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "ee3f0b73",
    "metadata": {},
    "outputs": [
@@ -838,7 +838,7 @@
        "0.5833333333333334"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,32 +867,75 @@
    "id": "134c75ae",
    "metadata": {},
    "source": [
-    "Evaluamos ambas búsquedas"
+    "Evaluamos ambas búsquedas. \n",
+    "Englobamos en una función para aplicar la función de búsqueda y la evaluación de las métricas.\n",
+    "Editamos la funcion `obtencion_relevantes` para insertar las métricas:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
+   "id": "ec8220d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluacion_metricas(ground_truth,funcion_busqueda ): \n",
+    "    relevantes= []\n",
+    "    print('Otención de resultados relevantes: [True, False, False, False, False], ...')\n",
+    "    for doc_groundt in tqdm(ground_truth):\n",
+    "        id_groundt= doc_groundt['document']\n",
+    "        resultados_search= funcion_busqueda(doc_groundt['question'], doc_groundt['course'] )\n",
+    "        \n",
+    "        relevante_registo = []\n",
+    "\n",
+    "        for result in resultados_search:\n",
+    "            relevante_registo.append(id_groundt == result['id']  )\n",
+    "        # lo mismo: relevantes_registro = [result['id] == id_groundt for result in resultados_search]\n",
+    "        \n",
+    "        relevantes.append(relevante_registo)\n",
+    "    \n",
+    "    evaluacion_hr= hit_rate(relevantes)\n",
+    "    evaluacion_mrr= mrr(relevantes)\n",
+    "\n",
+    "\n",
+    "    return {'Evaluacion HR ': evaluacion_hr,  'Evaluacion MRR': evaluacion_mrr}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4b5c17a7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0.7395720769397017\n",
-      "0.6998054895180462\n"
+      "  0%|          | 0/4627 [00:00<?, ?it/s]/tmp/ipykernel_2372/2031491954.py:25: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  respuesta_search= es_cliente.search(index=nombre_index, body= search_query)\n",
+      "100%|██████████| 4627/4627 [01:11<00:00, 64.55it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' Evaluacion HRR : 0.7395720769397017 \\n Evaluacion MRR: 0.6024385851163461'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(hit_rate(relevantes_elastic))\n",
-    "print(hit_rate(relevantes_minsearch))"
+    "print('Elastic Search')\n",
+    "evaluacion_metricas(ground_truthdata, search_elastic)\n",
+    "# print(hit_rate(relevantes_minsearch))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "id": "63999cec",
    "metadata": {},
    "outputs": [
@@ -900,14 +943,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6024385851163461\n",
-      "0.5955190548231396\n"
+      "Minsearch\n",
+      "Otención de resultados relevantes: [True, False, False, False, False], ...\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4627/4627 [00:15<00:00, 296.57it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Evaluacion HR ': 0.7722066133563864, 'Evaluacion MRR': 0.6609862401844248}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(mrr(relevantes_elastic))\n",
-    "print(mrr(relevantes_minsearch))"
+    "print('Minsearch')\n",
+    "evaluacion_metricas(ground_truthdata, search_minsearch)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47428af8",
+   "metadata": {},
+   "source": [
+    "Conclusión: Bajo las configuraciones realizadas para ambas funciones de búsquedas, para este caso la Función por similitud de Minsearch es un poco más robusta en ambas métricas."
    ]
   }
  ],
