--- a/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
+++ b/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
@@ -975,7 +975,7 @@
    "id": "47428af8",
    "metadata": {},
    "source": [
-    "Conclusión: Bajo las configuraciones realizadas para ambas funciones de búsquedas, para este caso la Función por similitud de Minsearch es un poco más robusta en ambas métricas."
+    "**Conclusión**: Bajo las configuraciones realizadas para ambas funciones de búsquedas, para este caso ambas funciones devuelven similares performance, siendo la Función por similitud de **Minsearch** ligeramente mejor."
    ]
   }
  ],
