--- a/workshops/workshop1.ipynb
+++ b/workshops/workshop1.ipynb
@@ -14,19 +14,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "d929e52a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"../images/wag-finger-baby.gif\">"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
+    "from IPython.display import display, HTML\n",
     "\n",
     "load_dotenv()\n",
     "api_key= os.getenv('OPENAI_API_KEY')\n",
     "\n",
     "kuzu = os.getenv('GRAPH_DATABASE_PROVIDER')\n",
-    "\n",
+    "display(HTML('<img src=\"../images/wag-finger-baby.gif\">'))\n",
     "\n"
    ]
   },
