--- a/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
+++ b/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
@@ -498,6 +498,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "1afa7f12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "29993d88",
    "metadata": {},
